--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "rail-delay-checker",
   "version": "1.0.0",
-  "description": "Supports both web-based API proxy and background notifier.",
-  "main": "delay_checker.mjs",
+  "description": "Web-based API proxy for National Rail HSP.",
+  "main": "server.mjs",
   "type": "module",
   "scripts": {
-    "start-web": "node server.mjs",
-    "start-background": "node delay_checker.mjs"
+    "start": "node server.mjs"
   },
   "keywords": [
     "rail",
     "delay",
-    "gwr",
-    "notification"
+    "gwr"
   ],
   "author": "",
   "license": "ISC",
@@ -20,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "node-notifier": "^10.0.1"
+    "ioredis": "^5.3.2",
+    "node-fetch": "^3.3.2"
   }
 }
